added style to the first section

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <h1 id="main-heading">RECIPES</h1>
     <section id="first-section">
-        <h2>Lorem ipsum dolor sit amet.</h2>
-        <nav>
-            <ul>
-                <li>Introduccion</li>
-                <li>Table</li>
-                <li>About Us</li>
-                <li>Contact</li>
+        <h2 id="second-heading">Lorem ipsum dolor sit amet.</h2>
+        <nav id="nav-bar">
+            <ul id="nav-list">
+                <li><a href="">Introduccion</a></li>
+                <li><a href="">Table</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
     </section>
