--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Recetas</title>
 </head>
 <body>
-    <h1 id="main-heading">RECIPES</h1>
+    <h1 id="main-heading">Ideas for every day!</h1>
     <section id="first-section">
         <h2 id="second-heading">Lorem ipsum dolor sit amet.</h2>
         <nav id="nav-bar">
@@ -23,52 +23,107 @@
             </ul>
         </nav>
     </section>
+    <img src="recipes+banner+.jpg" alt="recipes">
     <section>
         <figure>
             <img src="" alt="">
         </figure>
     </section>
     <section>
-        <h2>Introduction</h2>
-            <button>
+        <p id="Paragraph1">
+            Welcome to our mouthwatering recipes website, a culinary haven where you can explore an extensive collection of delicious recipes from around the world. Whether you're a seasoned chef or a beginner in the kitchen, our website is designed to inspire and guide you on your culinary adventures. Get ready to tantalize your taste buds with our diverse range of recipes, ranging from quick and easy meals for busy weeknights to elaborate dishes for special occasions. 
+        </p>
+            <button id="button1">
                 Return home
             </button>
     </section>
     <section>
         <h2>Recipes table</h2>
-        <article>
-            <h3>Ingredients</h3>
-            <ul>
-                <li>Lorem.</li>
-                <li>Lorem.</li>
-                <li>Lorem, ipsum.</li>
-                <li>Lorem, ipsum.</li>
-            </ul>
-        </article>
-        <article>
+        <table>
+            <tr>
+              <th>Dish Name</th>
+              <th>Ingredients</th>
+              <th>Process</th>
+              <th>Result</th>
+            </tr>
+            <tr>
+              <td>hummus & crispy chickpeas sandwich</td>
+              <td>
+                <ol>
+                    <li>300g pack cooked beetroot</li>
+                    <li>400g can chickpeas, drained</li>
+                    <li>Three tbsp vegan pesto</li>
+                    <li>Two large ciabatta rolls, sliced in half</li>
+                    <li>Two large handfuls mixed rocket, watercress & spinach salad</li>
+                </ol>
+              </td>
+              <td>
+                <p>Step1</p>
+                <p>Blitz the whole beetroot, ¾ of the chickpeas, 2 tbsp pesto and 1 tbsp oil in a food processor with some seasoning until you have a thick, smooth hummus. Heat the ciabatta following the pack instructions.</p>
+                <p>Step2</p>
+                <p>Fry the remaining chickpeas in a little oil until crisp, then set aside. Toss the salad leaves with the remaining pesto and a splash of vinegar. Slice the rolls, then assemble the sandwiches with the hummus, beetroot slices, salad leaves and fried chickpeas.</p>
+            </td>
+              <td>
+                <img src="Sanwich1.png" alt="Sandwich1"> 
+              </td>
+            </tr>
+        </tr>
+        <tr>
+          <td>Saucy bean baked eggs</td>
+          <td>
             <ol>
-                <li>Lorem, ipsum.</li>
-                <li>Lorem, ipsum.</li>
-                <li>Lorem, ipsum.</li>
+                <li>400g cans cherry tomatoes</li>
+                <li>400g can mixed bean salad, drained</li>
+                <li>200g baby spinach</li>
+                <li>4 medium eggs</li>
+                <li>50g thinly sliced smoked ham, torn</li>
             </ol>
-        </article>
-        <article>
-            <h3>Result</h3>
-            <figure>
-                <img src="" alt="">
-            </figure>
-        </article>
+          </td>
+          <td>
+            <p>Step1</p>
+            <p>Tip the tomatoes and bean salad into an ovenproof frying pan or shallow flameproof casserole dish. Simmer for 10 mins, or until reduced. Stir in the spinach and cook for 5 mins more until wilted.</p>
+            <p>Step2</p>
+            <p>Heat the grill to medium. Make four indentations in the mixture using the back of a spoon, then crack one egg in each. Nestle the ham in the mixture, then grill for 4-5 mins, or until the whites are set and the yolks runny. Serve with rye bread, if you like.</p>
+        </td>
+          <td>
+            <img src="Eggs.png" alt="Eggs"> 
+          </td>
+        </tr> 
+        <td>Peanut butter & jam flapjacks</td>
+        <td>
+          <ol>
+              <li>5 tbsp salted butter, plus extra for the tin</li>
+              <li>250g crunchy peanut butter</li>
+              <li>8 tbsp strawberry or raspberry jam</li>
+              <li>80g light brown soft sugar</li>
+              <li>200g rolled oats</li>
+          </ol>
+        </td>
+        <td>
+          <p>Step1</p>
+          <p>Heat the oven to 180C/160C fan/gas 4. Butter and line the base and sides of a 20cm square cake tin with baking parchment.</p>
+          <p>Step2</p>
+          <p>Put 3 tbsp each of the peanut butter and jam in separate small bowls and set aside. Tip the remaining peanut butter, the rest of the jam and the butter and sugar into a pan set over a medium heat and stir until everything has melted together. Quickly stir in the oats, then leave to cool for 5 mins.</p>
+          <p>Step3</p>
+          <p>Spoon the mixture into the prepared cake tin and gently press down with your hands. Dot over the reserved peanut butter and jam, then bake for 20-25 mins or until golden brown. Leave to cool completely in the tin, then turn out onto a board and cut into squares.</p>
+      </td>
+        <td>
+          <img src="Peanut.png" alt="Peanut"> 
+        </td>
+      </tr>           
+          </table>
         <button>
             Return home
         </button>
     </section>
     <section>
-        <h2>About Us</h2>
+        <h3>About Us</h3>
         <h3>Description</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, officiis?</p>
-        <h2>Adress</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-        <h2>quote Lorem ipsum dolor sit.</h2>
+        <p>Welcome to our recipes website, your ultimate culinary destination. Here, you'll find a treasure trove of handpicked recipes that are sure to tantalize your taste buds and inspire your inner chef. From tried-and-true classics to innovative twists on beloved dishes, our collection offers something for everyone.</p>
+        <h3>Adress</h3>
+        <p>123 Main Street,
+            Anytown, USA 12345</p>
+        <h3>"Cooking is like love. It should be entered into with abandon or not at all." - Harriet van Horne</h3>
         <button>
             Return home
         </button>
